--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,8 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "https://d3ekcj290tyqfc.cloudfront.net/icon/file/421/1490318485/emoji/Lifeguard%20-%20Flirtmoji.png",
-      "sizes": "512x512",
+      "src": "/favicon.png",
+      "sizes": "256x256",
       "type": "image/png"
     }
   ],
